--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,8 @@
   "name": "meteor-application-template-react",
   "private": true,
   "dependencies": {
-    "@babel/runtime": "^7.8.3",
+    "@babel/runtime": "^7.10.2",
+    "@sweetalert/with-react": "^0.1.1",
     "classnames": "^2.2.6",
     "core-js": "^3.6.4",
     "graphql": "^14.5.8",
