--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "classnames": "^2.2.6",
     "core-js": "^3.6.4",
     "graphql": "^14.5.8",
+    "iroh": "^0.3.0",
     "meteor-node-stubs": "^0.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
